--- a/archives/toutiao-search/2024-05-04.md
+++ b/archives/toutiao-search/2024-05-04.md
@@ -1,51 +1,70 @@
 # 2024-05-04
 
-共 192 条
+共 209 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat May 04 2024 15:00:55 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat May 04 2024 16:00:44 GMT+0800 (China Standard Time) -->
 1. [中国队3-0横扫日本 晋级尤伯杯决赛](https://so.toutiao.com/search?keyword=中国队3-0横扫日本+晋级尤伯杯决赛)
-1. [取消公摊会导致房价上涨吗](https://so.toutiao.com/search?keyword=取消公摊会导致房价上涨吗)
-1. [60秒回顾嫦娥六号发射精彩瞬间](https://so.toutiao.com/search?keyword=60秒回顾嫦娥六号发射精彩瞬间)
+1. [中山暴雨车辆被淹积水齐腰深](https://so.toutiao.com/search?keyword=中山暴雨车辆被淹积水齐腰深)
+1. [为推进中国式现代化贡献青春力量](https://so.toutiao.com/search?keyword=为推进中国式现代化贡献青春力量)
 1. [梅大高速塌方见义勇为司机获奖1万](https://so.toutiao.com/search?keyword=梅大高速塌方见义勇为司机获奖1万)
-1. [杭州榴莲价格半个月降了近一半](https://so.toutiao.com/search?keyword=杭州榴莲价格半个月降了近一半)
-1. [拜登向杨紫琼授予“总统自由勋章”](https://so.toutiao.com/search?keyword=拜登向杨紫琼授予“总统自由勋章”)
+1. [取消公摊会导致房价上涨吗](https://so.toutiao.com/search?keyword=取消公摊会导致房价上涨吗)
+1. [广东暴雨致农场鳄鱼出逃](https://so.toutiao.com/search?keyword=广东暴雨致农场鳄鱼出逃)
+1. [的哥连续上7年夜班 一年休2天](https://so.toutiao.com/search?keyword=的哥连续上7年夜班+一年休2天)
+1. [肇庆取消公摊会否拉开全国序幕](https://so.toutiao.com/search?keyword=肇庆取消公摊会否拉开全国序幕)
 1. [省级督察组现场核实遭故意封路阻挠](https://so.toutiao.com/search?keyword=省级督察组现场核实遭故意封路阻挠)
-1. [一对燕子飞进新人婚房](https://so.toutiao.com/search?keyword=一对燕子飞进新人婚房)
-1. [竹笋掉落瞬间妈妈扑向孩子](https://so.toutiao.com/search?keyword=竹笋掉落瞬间妈妈扑向孩子)
-1. [朱芳雨社媒晒徐杰怒吼张镇麟视频](https://so.toutiao.com/search?keyword=朱芳雨社媒晒徐杰怒吼张镇麟视频)
+1. [拜登向杨紫琼授予“总统自由勋章”](https://so.toutiao.com/search?keyword=拜登向杨紫琼授予“总统自由勋章”)
 1. [梅大高速塌方现场图引热议 实为旧图](https://so.toutiao.com/search?keyword=梅大高速塌方现场图引热议+实为旧图)
 1. [媒体对话梅大高速横放货车拦车司机](https://so.toutiao.com/search?keyword=媒体对话梅大高速横放货车拦车司机)
 1. [“刘能”小儿子结婚 未见大儿子出席](https://so.toutiao.com/search?keyword=“刘能”小儿子结婚+未见大儿子出席)
-1. [肇庆取消公摊会否拉开全国序幕](https://so.toutiao.com/search?keyword=肇庆取消公摊会否拉开全国序幕)
+1. [竹笋掉落瞬间妈妈扑向孩子](https://so.toutiao.com/search?keyword=竹笋掉落瞬间妈妈扑向孩子)
+1. [梅大拦车者欲将奖金捐给遇难者家属](https://so.toutiao.com/search?keyword=梅大拦车者欲将奖金捐给遇难者家属)
+1. [杭州榴莲价格半个月降了近一半](https://so.toutiao.com/search?keyword=杭州榴莲价格半个月降了近一半)
 1. [白马寺回应女子不听劝阻摘牡丹花](https://so.toutiao.com/search?keyword=白马寺回应女子不听劝阻摘牡丹花)
-1. [香港所有学校今日下午停课](https://so.toutiao.com/search?keyword=香港所有学校今日下午停课)
-1. [史上最大自行火炮一炮能打爆一栋楼](https://so.toutiao.com/search?keyword=史上最大自行火炮一炮能打爆一栋楼)
-1. [被小孩打碎近12万瓷瓶为何不做防护](https://so.toutiao.com/search?keyword=被小孩打碎近12万瓷瓶为何不做防护)
-1. [羊群沿陡峭山坡下山场面壮观](https://so.toutiao.com/search?keyword=羊群沿陡峭山坡下山场面壮观)
-1. [县委书记收房收车：觉得组织查不到](https://so.toutiao.com/search?keyword=县委书记收房收车：觉得组织查不到)
-1. [城管局回应重庆长江大桥外卖鲜花成堆](https://so.toutiao.com/search?keyword=城管局回应重庆长江大桥外卖鲜花成堆)
-1. [华晨宇演唱会唱到日出](https://so.toutiao.com/search?keyword=华晨宇演唱会唱到日出)
-1. [小羽官宣与王思聪分手](https://so.toutiao.com/search?keyword=小羽官宣与王思聪分手)
-1. [俄罗斯政府暂时禁止食糖出口](https://so.toutiao.com/search?keyword=俄罗斯政府暂时禁止食糖出口)
 1. [乌有权用英武器打击俄领土？俄回应](https://so.toutiao.com/search?keyword=乌有权用英武器打击俄领土？俄回应)
-1. [保时捷司机逆行占道 警察强制执法](https://so.toutiao.com/search?keyword=保时捷司机逆行占道+警察强制执法)
-1. [张韶涵方辟谣商演时在台上拉肚子](https://so.toutiao.com/search?keyword=张韶涵方辟谣商演时在台上拉肚子)
+1. [被小孩打碎近12万瓷瓶为何不做防护](https://so.toutiao.com/search?keyword=被小孩打碎近12万瓷瓶为何不做防护)
+1. [一对燕子飞进新人婚房](https://so.toutiao.com/search?keyword=一对燕子飞进新人婚房)
+1. [媒体人：哈登没总冠军挺让球迷心疼](https://so.toutiao.com/search?keyword=媒体人：哈登没总冠军挺让球迷心疼)
+1. [朱芳雨社媒晒徐杰怒吼张镇麟视频](https://so.toutiao.com/search?keyword=朱芳雨社媒晒徐杰怒吼张镇麟视频)
+1. [史上最大自行火炮一炮能打爆一栋楼](https://so.toutiao.com/search?keyword=史上最大自行火炮一炮能打爆一栋楼)
+1. [小羽官宣与王思聪分手](https://so.toutiao.com/search?keyword=小羽官宣与王思聪分手)
+1. [羊群沿陡峭山坡下山场面壮观](https://so.toutiao.com/search?keyword=羊群沿陡峭山坡下山场面壮观)
+1. [乌克兰打击距离将扩大至550公里](https://so.toutiao.com/search?keyword=乌克兰打击距离将扩大至550公里)
 1. [染色松狮犬变身“熊猫狗”被围观](https://so.toutiao.com/search?keyword=染色松狮犬变身“熊猫狗”被围观)
+1. [县委书记收房收车：觉得组织查不到](https://so.toutiao.com/search?keyword=县委书记收房收车：觉得组织查不到)
+1. [张韶涵方辟谣商演时在台上拉肚子](https://so.toutiao.com/search?keyword=张韶涵方辟谣商演时在台上拉肚子)
+1. [华晨宇演唱会唱到日出](https://so.toutiao.com/search?keyword=华晨宇演唱会唱到日出)
+1. [陆丰4人溺亡警示：溺水后如何自救](https://so.toutiao.com/search?keyword=陆丰4人溺亡警示：溺水后如何自救)
+1. [河南大学大礼堂火灾反思](https://so.toutiao.com/search?keyword=河南大学大礼堂火灾反思)
+1. [东契奇：我从来不会怀疑欧文的话](https://so.toutiao.com/search?keyword=东契奇：我从来不会怀疑欧文的话)
+1. [网友晒自己表哥娶的外国媳妇](https://so.toutiao.com/search?keyword=网友晒自己表哥娶的外国媳妇)
+1. [儿子救人溺亡 母亲休克被路人施救](https://so.toutiao.com/search?keyword=儿子救人溺亡+母亲休克被路人施救)
+1. [中企拿下卡塔尔超级大单](https://so.toutiao.com/search?keyword=中企拿下卡塔尔超级大单)
+1. [车主称问界新M7行车时大灯突然熄灭](https://so.toutiao.com/search?keyword=车主称问界新M7行车时大灯突然熄灭)
+1. [台媒关注嫦娥六号将于月球背面取样](https://so.toutiao.com/search?keyword=台媒关注嫦娥六号将于月球背面取样)
+1. [保时捷司机逆行占道 警察强制执法](https://so.toutiao.com/search?keyword=保时捷司机逆行占道+警察强制执法)
+1. [浙江普陀山高颜值警花警草火了](https://so.toutiao.com/search?keyword=浙江普陀山高颜值警花警草火了)
+1. [谁为美国大学抗议活动买单](https://so.toutiao.com/search?keyword=谁为美国大学抗议活动买单)
+1. [媒体：博物馆免赔回避责任认定](https://so.toutiao.com/search?keyword=媒体：博物馆免赔回避责任认定)
+1. [老人想拿回去年给的小费未果报警](https://so.toutiao.com/search?keyword=老人想拿回去年给的小费未果报警)
+1. [美议员再炒所谓中方资助美高校抗议](https://so.toutiao.com/search?keyword=美议员再炒所谓中方资助美高校抗议)
+1. [国际能源署称中国新能源车断档领先](https://so.toutiao.com/search?keyword=国际能源署称中国新能源车断档领先)
+1. [香港所有学校今日下午停课](https://so.toutiao.com/search?keyword=香港所有学校今日下午停课)
+1. [鸿蒙奠基者寄语青年：打破技术壁垒](https://so.toutiao.com/search?keyword=鸿蒙奠基者寄语青年：打破技术壁垒)
+1. [威少首轮场均6.3分4.2板1.7助](https://so.toutiao.com/search?keyword=威少首轮场均6.3分4.2板1.7助)
+1. [徐杰：客场取胜真的很难](https://so.toutiao.com/search?keyword=徐杰：客场取胜真的很难)
+1. [广东斗门打破当地5月上旬雨量纪录](https://so.toutiao.com/search?keyword=广东斗门打破当地5月上旬雨量纪录)
+1. [60秒回顾嫦娥六号发射精彩瞬间](https://so.toutiao.com/search?keyword=60秒回顾嫦娥六号发射精彩瞬间)
+1. [城管局回应重庆长江大桥外卖鲜花成堆](https://so.toutiao.com/search?keyword=城管局回应重庆长江大桥外卖鲜花成堆)
+1. [俄罗斯政府暂时禁止食糖出口](https://so.toutiao.com/search?keyword=俄罗斯政府暂时禁止食糖出口)
 1. [女子在泳池教孩子自由泳姿态婀娜](https://so.toutiao.com/search?keyword=女子在泳池教孩子自由泳姿态婀娜)
 1. [小杨哥办电音节被投诉噪音大扰民](https://so.toutiao.com/search?keyword=小杨哥办电音节被投诉噪音大扰民)
 1. [特朗普最美女助手希克斯泪洒法庭](https://so.toutiao.com/search?keyword=特朗普最美女助手希克斯泪洒法庭)
-1. [车主称问界新M7行车时大灯突然熄灭](https://so.toutiao.com/search?keyword=车主称问界新M7行车时大灯突然熄灭)
 1. [美财长表示基本面仍然指向通胀放缓](https://so.toutiao.com/search?keyword=美财长表示基本面仍然指向通胀放缓)
-1. [中企拿下卡塔尔超级大单](https://so.toutiao.com/search?keyword=中企拿下卡塔尔超级大单)
 1. [联合国：以军进攻拉法或成一场屠杀](https://so.toutiao.com/search?keyword=联合国：以军进攻拉法或成一场屠杀)
-1. [浙江普陀山高颜值警花警草火了](https://so.toutiao.com/search?keyword=浙江普陀山高颜值警花警草火了)
-1. [河南大学大礼堂火灾反思](https://so.toutiao.com/search?keyword=河南大学大礼堂火灾反思)
-1. [老人想拿回去年给的小费未果报警](https://so.toutiao.com/search?keyword=老人想拿回去年给的小费未果报警)
 1. [这个五一连沙漠里都“堵人了”](https://so.toutiao.com/search?keyword=这个五一连沙漠里都“堵人了”)
 1. [快船休赛期哈登普拉姆利成自由球员](https://so.toutiao.com/search?keyword=快船休赛期哈登普拉姆利成自由球员)
 1. [民警接孩子放学途中扶起摔倒老人](https://so.toutiao.com/search?keyword=民警接孩子放学途中扶起摔倒老人)
-1. [鸿蒙奠基者寄语青年：打破技术壁垒](https://so.toutiao.com/search?keyword=鸿蒙奠基者寄语青年：打破技术壁垒)
 1. [月球背面采样将实现“从0到1”突破](https://so.toutiao.com/search?keyword=月球背面采样将实现“从0到1”突破)
 1. [今年第3个龙年龙月龙日龙时](https://so.toutiao.com/search?keyword=今年第3个龙年龙月龙日龙时)
 1. [黑色暴雨警告 澳门中小幼特教停课](https://so.toutiao.com/search?keyword=黑色暴雨警告+澳门中小幼特教停课)
@@ -64,11 +83,9 @@
 1. [ESPN封杀贝弗利 不会再请他做节目](https://so.toutiao.com/search?keyword=ESPN封杀贝弗利+不会再请他做节目)
 1. [嫦娥六号发射成功](https://so.toutiao.com/search?keyword=嫦娥六号发射成功)
 1. [河南老君山五一推出一毛钱一杯奶茶](https://so.toutiao.com/search?keyword=河南老君山五一推出一毛钱一杯奶茶)
-1. [谁为美国大学抗议活动买单](https://so.toutiao.com/search?keyword=谁为美国大学抗议活动买单)
 1. [媒体：美国在巴入联问题上尽显双标](https://so.toutiao.com/search?keyword=媒体：美国在巴入联问题上尽显双标)
 1. [网友遇特警小姐姐眼神坚毅走路带风](https://so.toutiao.com/search?keyword=网友遇特警小姐姐眼神坚毅走路带风)
 1. [杨鸣：郭艾伦能否出战取决于他个人](https://so.toutiao.com/search?keyword=杨鸣：郭艾伦能否出战取决于他个人)
-1. [徐杰：客场取胜真的很难](https://so.toutiao.com/search?keyword=徐杰：客场取胜真的很难)
 1. [张泽群晒与董卿周涛朱军合影](https://so.toutiao.com/search?keyword=张泽群晒与董卿周涛朱军合影)
 1. [闪婚又闪离 男子要回部分彩礼](https://so.toutiao.com/search?keyword=闪婚又闪离+男子要回部分彩礼)
 1. [轰6K飞行员说遭遇外军机肯定不会怂](https://so.toutiao.com/search?keyword=轰6K飞行员说遭遇外军机肯定不会怂)
