--- a/archives/toutiao-search/2024-05-04.md
+++ b/archives/toutiao-search/2024-05-04.md
@@ -1,70 +1,78 @@
 # 2024-05-04
 
-共 229 条
+共 236 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat May 04 2024 18:00:49 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat May 04 2024 19:00:44 GMT+0800 (China Standard Time) -->
+1. [广东高速塌方首位伤员出院：15岁男生](https://so.toutiao.com/search?keyword=广东高速塌方首位伤员出院：15岁男生)
 1. [中山暴雨车辆被淹积水齐腰深](https://so.toutiao.com/search?keyword=中山暴雨车辆被淹积水齐腰深)
-1. [取消公摊会导致房价上涨吗](https://so.toutiao.com/search?keyword=取消公摊会导致房价上涨吗)
 1. [为推进中国式现代化贡献青春力量](https://so.toutiao.com/search?keyword=为推进中国式现代化贡献青春力量)
-1. [梅大高速塌方见义勇为司机获奖1万](https://so.toutiao.com/search?keyword=梅大高速塌方见义勇为司机获奖1万)
+1. [广东成立高速塌方灾害调查评估组](https://so.toutiao.com/search?keyword=广东成立高速塌方灾害调查评估组)
 1. [哈马斯将宣布停火 美支持以色列撤军](https://so.toutiao.com/search?keyword=哈马斯将宣布停火+美支持以色列撤军)
 1. [广东暴雨致鳄鱼出逃 已全部抓回](https://so.toutiao.com/search?keyword=广东暴雨致鳄鱼出逃+已全部抓回)
-1. [中国队3-0横扫日本 晋级尤伯杯决赛](https://so.toutiao.com/search?keyword=中国队3-0横扫日本+晋级尤伯杯决赛)
-1. [香飘飘日本超市讽核污水](https://so.toutiao.com/search?keyword=香飘飘日本超市讽核污水)
-1. [5岁男童非正常死亡 警方提请逮捕生母](https://so.toutiao.com/search?keyword=5岁男童非正常死亡+警方提请逮捕生母)
-1. [保时捷司机逆行占道 警察强制执法](https://so.toutiao.com/search?keyword=保时捷司机逆行占道+警察强制执法)
-1. [梅大高速塌方现场图引热议 实为旧图](https://so.toutiao.com/search?keyword=梅大高速塌方现场图引热议+实为旧图)
-1. [梅大拦车者欲将奖金捐给遇难者家属](https://so.toutiao.com/search?keyword=梅大拦车者欲将奖金捐给遇难者家属)
-1. [的哥连续上7年夜班 一年休2天](https://so.toutiao.com/search?keyword=的哥连续上7年夜班+一年休2天)
-1. [广东高速塌方首位伤员出院：15岁男生](https://so.toutiao.com/search?keyword=广东高速塌方首位伤员出院：15岁男生)
-1. [媒体对话梅大高速横放货车拦车司机](https://so.toutiao.com/search?keyword=媒体对话梅大高速横放货车拦车司机)
-1. [被小孩打碎近12万瓷瓶为何不做防护](https://so.toutiao.com/search?keyword=被小孩打碎近12万瓷瓶为何不做防护)
-1. [广东多地再迎疾风暴雨](https://so.toutiao.com/search?keyword=广东多地再迎疾风暴雨)
-1. [儿子救人溺亡 母亲休克被路人施救](https://so.toutiao.com/search?keyword=儿子救人溺亡+母亲休克被路人施救)
-1. [他真的娶到了高中就想娶的女孩](https://so.toutiao.com/search?keyword=他真的娶到了高中就想娶的女孩)
 1. [省级督察组现场核实遭故意封路阻挠](https://so.toutiao.com/search?keyword=省级督察组现场核实遭故意封路阻挠)
+1. [5岁男童非正常死亡 警方提请逮捕生母](https://so.toutiao.com/search?keyword=5岁男童非正常死亡+警方提请逮捕生母)
+1. [中国队3-0横扫日本 晋级尤伯杯决赛](https://so.toutiao.com/search?keyword=中国队3-0横扫日本+晋级尤伯杯决赛)
+1. [被小孩打碎近12万瓷瓶为何不做防护](https://so.toutiao.com/search?keyword=被小孩打碎近12万瓷瓶为何不做防护)
+1. [梅大高速塌方现场图引热议 实为旧图](https://so.toutiao.com/search?keyword=梅大高速塌方现场图引热议+实为旧图)
+1. [梅大高速塌方见义勇为司机获奖1万](https://so.toutiao.com/search?keyword=梅大高速塌方见义勇为司机获奖1万)
+1. [香飘飘日本超市讽核污水](https://so.toutiao.com/search?keyword=香飘飘日本超市讽核污水)
+1. [的哥连续上7年夜班 一年休2天](https://so.toutiao.com/search?keyword=的哥连续上7年夜班+一年休2天)
+1. [梅大拦车者欲将奖金捐给遇难者家属](https://so.toutiao.com/search?keyword=梅大拦车者欲将奖金捐给遇难者家属)
 1. [五一中国游客遍布全球1035个城市](https://so.toutiao.com/search?keyword=五一中国游客遍布全球1035个城市)
-1. [拜登向杨紫琼授予“总统自由勋章”](https://so.toutiao.com/search?keyword=拜登向杨紫琼授予“总统自由勋章”)
+1. [儿子救人溺亡 母亲休克被路人施救](https://so.toutiao.com/search?keyword=儿子救人溺亡+母亲休克被路人施救)
+1. [媒体对话梅大高速横放货车拦车司机](https://so.toutiao.com/search?keyword=媒体对话梅大高速横放货车拦车司机)
+1. [取消公摊会导致房价上涨吗](https://so.toutiao.com/search?keyword=取消公摊会导致房价上涨吗)
+1. [史上最大自行火炮一炮能打爆一栋楼](https://so.toutiao.com/search?keyword=史上最大自行火炮一炮能打爆一栋楼)
 1. [朱芳雨社媒晒徐杰怒吼张镇麟视频](https://so.toutiao.com/search?keyword=朱芳雨社媒晒徐杰怒吼张镇麟视频)
 1. [小羽官宣与王思聪分手](https://so.toutiao.com/search?keyword=小羽官宣与王思聪分手)
 1. [“刘能”小儿子结婚 未见大儿子出席](https://so.toutiao.com/search?keyword=“刘能”小儿子结婚+未见大儿子出席)
-1. [肇庆取消公摊会否拉开全国序幕](https://so.toutiao.com/search?keyword=肇庆取消公摊会否拉开全国序幕)
-1. [华晨宇演唱会唱到日出](https://so.toutiao.com/search?keyword=华晨宇演唱会唱到日出)
-1. [撒贝宁挑战跨栏](https://so.toutiao.com/search?keyword=撒贝宁挑战跨栏)
-1. [染色松狮犬变身“熊猫狗”被围观](https://so.toutiao.com/search?keyword=染色松狮犬变身“熊猫狗”被围观)
 1. [一对燕子飞进新人婚房](https://so.toutiao.com/search?keyword=一对燕子飞进新人婚房)
+1. [陆丰4人溺亡警示：溺水后如何自救](https://so.toutiao.com/search?keyword=陆丰4人溺亡警示：溺水后如何自救)
+1. [马斯克：Model Y长续航可解锁里程](https://so.toutiao.com/search?keyword=马斯克：Model+Y长续航可解锁里程)
+1. [肇庆取消公摊会否拉开全国序幕](https://so.toutiao.com/search?keyword=肇庆取消公摊会否拉开全国序幕)
+1. [日本民众集会守护和平反对修宪](https://so.toutiao.com/search?keyword=日本民众集会守护和平反对修宪)
+1. [保时捷司机逆行占道 警察强制执法](https://so.toutiao.com/search?keyword=保时捷司机逆行占道+警察强制执法)
+1. [拜登向杨紫琼授予“总统自由勋章”](https://so.toutiao.com/search?keyword=拜登向杨紫琼授予“总统自由勋章”)
+1. [快船主帅：我为我的球员感到骄傲](https://so.toutiao.com/search?keyword=快船主帅：我为我的球员感到骄傲)
+1. [张韶涵方辟谣商演时在台上拉肚子](https://so.toutiao.com/search?keyword=张韶涵方辟谣商演时在台上拉肚子)
+1. [张杰看到情侣求婚的反应](https://so.toutiao.com/search?keyword=张杰看到情侣求婚的反应)
+1. [东契奇：欧文就是很神奇](https://so.toutiao.com/search?keyword=东契奇：欧文就是很神奇)
+1. [华晨宇演唱会唱到日出](https://so.toutiao.com/search?keyword=华晨宇演唱会唱到日出)
+1. [鸿蒙奠基者寄语青年：打破技术壁垒](https://so.toutiao.com/search?keyword=鸿蒙奠基者寄语青年：打破技术壁垒)
+1. [广东多地再迎疾风暴雨](https://so.toutiao.com/search?keyword=广东多地再迎疾风暴雨)
+1. [白马寺回应女子不听劝阻摘牡丹花](https://so.toutiao.com/search?keyword=白马寺回应女子不听劝阻摘牡丹花)
+1. [男子地铁吵架遇地铁判官变劝架者](https://so.toutiao.com/search?keyword=男子地铁吵架遇地铁判官变劝架者)
+1. [刘嘉玲曝梁朝伟酒后很任性](https://so.toutiao.com/search?keyword=刘嘉玲曝梁朝伟酒后很任性)
 1. [河南大学大礼堂火灾反思](https://so.toutiao.com/search?keyword=河南大学大礼堂火灾反思)
+1. [学者：台湾从来都不是一个“国家”](https://so.toutiao.com/search?keyword=学者：台湾从来都不是一个“国家”)
+1. [中山一乡镇医院积水达腰部深](https://so.toutiao.com/search?keyword=中山一乡镇医院积水达腰部深)
+1. [辽宁主场球迷对朱芳雨大骂脏话](https://so.toutiao.com/search?keyword=辽宁主场球迷对朱芳雨大骂脏话)
+1. [染色松狮犬变身“熊猫狗”被围观](https://so.toutiao.com/search?keyword=染色松狮犬变身“熊猫狗”被围观)
+1. [河大称火灾发生时礼堂内无施工人员](https://so.toutiao.com/search?keyword=河大称火灾发生时礼堂内无施工人员)
+1. [网友晒自己表哥娶的外国媳妇](https://so.toutiao.com/search?keyword=网友晒自己表哥娶的外国媳妇)
+1. [这个五一连沙漠里都“堵人了”](https://so.toutiao.com/search?keyword=这个五一连沙漠里都“堵人了”)
+1. [珠海市三防指挥部提醒非必要不出门](https://so.toutiao.com/search?keyword=珠海市三防指挥部提醒非必要不出门)
+1. [媒体：博物馆免赔回避责任认定](https://so.toutiao.com/search?keyword=媒体：博物馆免赔回避责任认定)
+1. [他真的娶到了高中就想娶的女孩](https://so.toutiao.com/search?keyword=他真的娶到了高中就想娶的女孩)
+1. [撒贝宁挑战跨栏](https://so.toutiao.com/search?keyword=撒贝宁挑战跨栏)
 1. [俄罗斯政府暂时禁止食糖出口](https://so.toutiao.com/search?keyword=俄罗斯政府暂时禁止食糖出口)
 1. [杭州榴莲价格半个月降了近一半](https://so.toutiao.com/search?keyword=杭州榴莲价格半个月降了近一半)
 1. [县委书记收房收车：觉得组织查不到](https://so.toutiao.com/search?keyword=县委书记收房收车：觉得组织查不到)
-1. [张韶涵方辟谣商演时在台上拉肚子](https://so.toutiao.com/search?keyword=张韶涵方辟谣商演时在台上拉肚子)
-1. [陆丰4人溺亡警示：溺水后如何自救](https://so.toutiao.com/search?keyword=陆丰4人溺亡警示：溺水后如何自救)
 1. [乌有权用英武器打击俄领土？俄回应](https://so.toutiao.com/search?keyword=乌有权用英武器打击俄领土？俄回应)
-1. [珠海市三防指挥部提醒非必要不出门](https://so.toutiao.com/search?keyword=珠海市三防指挥部提醒非必要不出门)
 1. [外媒：哈马斯对谈判坚持三点要求](https://so.toutiao.com/search?keyword=外媒：哈马斯对谈判坚持三点要求)
-1. [鸿蒙奠基者寄语青年：打破技术壁垒](https://so.toutiao.com/search?keyword=鸿蒙奠基者寄语青年：打破技术壁垒)
-1. [快船主帅：我为我的球员感到骄傲](https://so.toutiao.com/search?keyword=快船主帅：我为我的球员感到骄傲)
-1. [白马寺回应女子不听劝阻摘牡丹花](https://so.toutiao.com/search?keyword=白马寺回应女子不听劝阻摘牡丹花)
 1. [哈马斯对当前谈判文件持否定立场](https://so.toutiao.com/search?keyword=哈马斯对当前谈判文件持否定立场)
 1. [学生体育中考抄近道被网友质疑作弊](https://so.toutiao.com/search?keyword=学生体育中考抄近道被网友质疑作弊)
 1. [车主称问界新M7行车时大灯突然熄灭](https://so.toutiao.com/search?keyword=车主称问界新M7行车时大灯突然熄灭)
-1. [这个五一连沙漠里都“堵人了”](https://so.toutiao.com/search?keyword=这个五一连沙漠里都“堵人了”)
-1. [中山一乡镇医院积水达腰部深](https://so.toutiao.com/search?keyword=中山一乡镇医院积水达腰部深)
-1. [男子地铁吵架遇地铁判官变劝架者](https://so.toutiao.com/search?keyword=男子地铁吵架遇地铁判官变劝架者)
 1. [羊群沿陡峭山坡下山场面壮观](https://so.toutiao.com/search?keyword=羊群沿陡峭山坡下山场面壮观)
-1. [媒体：博物馆免赔回避责任认定](https://so.toutiao.com/search?keyword=媒体：博物馆免赔回避责任认定)
-1. [网友晒自己表哥娶的外国媳妇](https://so.toutiao.com/search?keyword=网友晒自己表哥娶的外国媳妇)
 1. [浙江普陀山高颜值警花警草火了](https://so.toutiao.com/search?keyword=浙江普陀山高颜值警花警草火了)
 1. [烟台市民免费接送华晨宇演唱会歌迷](https://so.toutiao.com/search?keyword=烟台市民免费接送华晨宇演唱会歌迷)
 1. [乌克兰打击距离将扩大至550公里](https://so.toutiao.com/search?keyword=乌克兰打击距离将扩大至550公里)
 1. [东契奇：我从来不会怀疑欧文的话](https://so.toutiao.com/search?keyword=东契奇：我从来不会怀疑欧文的话)
 1. [张庆伟已任山东枣庄市委常委](https://so.toutiao.com/search?keyword=张庆伟已任山东枣庄市委常委)
-1. [史上最大自行火炮一炮能打爆一栋楼](https://so.toutiao.com/search?keyword=史上最大自行火炮一炮能打爆一栋楼)
 1. [小杨哥办电音节被投诉噪音大扰民](https://so.toutiao.com/search?keyword=小杨哥办电音节被投诉噪音大扰民)
 1. [哈登时隔8年再次在季后赛首轮出局](https://so.toutiao.com/search?keyword=哈登时隔8年再次在季后赛首轮出局)
 1. [乔治：要围绕现有阵容继续建队](https://so.toutiao.com/search?keyword=乔治：要围绕现有阵容继续建队)
-1. [马斯克：Model Y长续航可解锁里程](https://so.toutiao.com/search?keyword=马斯克：Model+Y长续航可解锁里程)
 1. [广东暴雨致农场鳄鱼出逃](https://so.toutiao.com/search?keyword=广东暴雨致农场鳄鱼出逃)
 1. [竹笋掉落瞬间妈妈扑向孩子](https://so.toutiao.com/search?keyword=竹笋掉落瞬间妈妈扑向孩子)
 1. [媒体人：哈登没总冠军挺让球迷心疼](https://so.toutiao.com/search?keyword=媒体人：哈登没总冠军挺让球迷心疼)
@@ -90,7 +98,6 @@
 1. [今年第3个龙年龙月龙日龙时](https://so.toutiao.com/search?keyword=今年第3个龙年龙月龙日龙时)
 1. [黑色暴雨警告 澳门中小幼特教停课](https://so.toutiao.com/search?keyword=黑色暴雨警告+澳门中小幼特教停课)
 1. [SU7刹车系统采用四重制动冗余策略](https://so.toutiao.com/search?keyword=SU7刹车系统采用四重制动冗余策略)
-1. [河大称火灾发生时礼堂内无施工人员](https://so.toutiao.com/search?keyword=河大称火灾发生时礼堂内无施工人员)
 1. [五一假期昆明这7个景区出行热度高](https://so.toutiao.com/search?keyword=五一假期昆明这7个景区出行热度高)
 1. [俄防长：正在南千岛群岛建观察哨所](https://so.toutiao.com/search?keyword=俄防长：正在南千岛群岛建观察哨所)
 1. [网友为看“无语菩萨”排队半小时](https://so.toutiao.com/search?keyword=网友为看“无语菩萨”排队半小时)
